tests/stderr-snapshots/integration__integration__general__duplicate_label.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: duplicate label 'label'
   ┌─ <input>:22:5
   │
21 │     label:
   │     ----- originally defined here
22 │     label:
   │     ^^^^^ redefined here


